# StarScan

./: CMakeLists.txt  README.md  StarScan.dmg  TestMain.cpp
StarScanGUI/: .qmake.stash  Makefile  StarScanGUI.pro  icon.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
StarScanGUI/StarScanGUI.app/Contents/: Info.plist
StarScanGUI/StarScanGUI.app/Contents/MacOS/: StarScanGUI
